--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </div>
         </header>
         
-        <!-- Admin Login Modal -->
+        <!-- Account Sign In Modal -->
         <div id="admin-login-modal" class="modal" style="display:none;">
             <div class="modal-content">
                 <span class="close-modal" onclick="closeAdminLogin()">&times;</span>
-                <h2>Admin Login</h2>
-                <input type="email" id="admin-email-input" placeholder="Enter your Gmail address">
+                <h2>Sign In</h2>
+                <input type="email" id="admin-email-input" placeholder="Enter your email address">
                 <input type="password" id="admin-password-input" placeholder="Enter your password">
                 <button onclick="adminLogin()">Login</button>
                 <div id="bootstrap-section" style="display:none;" class="bootstrap-section">
