--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div id="user-session-box" class="user-session-box" style="display:none;">
                     <span id="user-session-email" class="user-session-email"></span>
                     <button class="admin-btn" onclick="userLogout()">Logout</button>
+                    <button class="admin-btn" onclick="deleteMyAccount()">Delete Account</button>
                 </div>
                 <div id="cart-icon-wrapper">
                     <button id="cart-icon-btn" onclick="toggleCartDropdown()">
