--- a/clerk-javascript/index.html
+++ b/clerk-javascript/index.html
@@ -10,6 +10,7 @@
         <button id="front-signin-btn" class="signin-btn" onclick="showUserAuth('signin')">Sign In</button>
         <button id="front-bg-btn" class="bg-picker-btn" style="display:none;" onclick="openBackgroundPicker('front_page')">Change background</button>
         <button id="front-signout-btn" class="signout-btn" style="display:none;" onclick="userLogout()">Sign Out</button>
+        <button id="front-delete-btn" class="signout-btn" style="display:none;" onclick="deleteMyAccount()">Delete Account</button>
         <div class="overlay">
             <h1 id="shop-main-name">Glow Up</h1>
             <button onclick="enterShop()">Enter Shop</button>
